--- a/signin.html
+++ b/signin.html
@@ -25,29 +25,29 @@
 			>
 				<div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
 					<div class="relative flex h-16 items-center justify-between">
-						<div
-							class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-between"
-						>
-							<div class="flex flex-shrink-0 items-center">
+						<div class="flex flex-shrink-0 items-center">
+							<a href="/index.html">
 								<img
-									class="block w-auto lg:hidden"
-									src="/img/logoSmall.png"
-									alt="Your Company"
-								/>
+								class="block w-auto lg:hidden"
+								src="/img/logoSmall.png"
+								alt="Your Company"
+							/>
+							</a>
+							<a href="/index.html">
 								<img
 									class="hidden w-auto lg:block"
 									src="/img/logoSmall.png"
 									alt="Your Company"
 								/>
-							</div>
+							</a>
 						</div>
 					</div>
 				</div>
 			</nav>
 		</header>
 		<main id="main">
-			<section id="sign-in" class="pt-20 sm:pt-0 pb-5 sm:pb-0">
-				<div class="flex flex-col items-center justify-center px-6 pt-8 mx-auto md:h-screen lg:py-0">
+			<section id="sign-in" class="pt-20 md:py-32">
+				<div class="flex flex-col items-center justify-center px-6 mx-auto lg:py-0">
 					<div class="w-full rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
 						<div class="p-6 space-y-4 md:space-y-6 sm:p-8">
 							<h1 class="text-xl font-h1 leading-tight tracking-tight md:text-2xl dark:text-white">
