fix navlinks on header

--- a/addProduct.html
+++ b/addProduct.html
@@ -100,9 +100,7 @@
 				</div>
 				<!-- Mobile menu, show/hide based on menu state. -->
 				<div class="sm:hidden" id="mobile-menu">
-					<div class="space-y-1 px-2 pt-2 pb-3">
 					
-					</div>
 				</div>
 				<div id="nav-links-desktop" class="hidden sm:pl-6 sm:block bg-[#A77619]">
 					
@@ -118,7 +116,7 @@
                             <div>
 								<div id="listing-title" class="">
                                 <div class="">
-                                    <label for="title" class="block text-base font-h2 text-white">Title</label>
+                                    <label for="title-title" class="block text-base font-h2 text-white">Title</label>
                                     <div class="mt-1 flex rounded-md shadow-sm">
                                         <input id="title-title" type="text" name="title" class="block w-full font-body flex-1 rounded-md border-gray-300 focus:border-[#F2AE2E] focus:ring-[#F2AE2E] text-sm" placeholder="Title for listing">
                                     </div>
