remove unused code and console log

--- a/addProduct.html
+++ b/addProduct.html
@@ -67,7 +67,7 @@
 									<!-- Profile dropdown -->
 									<div class="relative ml-3">
 										<div class="flex">
-											<button id="user-menu-btn" type="button" class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:text-white" aria-controls="user-menu-btn" aria-haspopup="true" aria-expanded="false">
+											<button id="user-menu-btn" type="button" class="max-h-8 max-w-8 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:text-white" aria-controls="user-menu-btn" aria-haspopup="true" aria-expanded="false">
 											
 											</button>
 										</div>
