--- a/signin.html
+++ b/signin.html
@@ -28,10 +28,10 @@
 						<div class="flex flex-shrink-0 items-center">
 							<a href="/index.html">
 								<img
-								class="block w-auto lg:hidden"
-								src="/img/logoSmall.png"
-								alt="Your Company"
-							/>
+									class="block w-auto lg:hidden"
+									src="/img/logoSmall.png"
+									alt="Your Company"
+								/>
 							</a>
 							<a href="/index.html">
 								<img
@@ -46,11 +46,17 @@
 			</nav>
 		</header>
 		<main id="main">
-			<section id="sign-in" class="pt-20  md:py-32">
-				<div class="flex flex-col items-center justify-center px-6 mx-auto lg:py-0">
-					<div class="w-full rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+			<section id="sign-in" class="pt-20 md:py-32">
+				<div
+					class="flex flex-col items-center justify-center px-6 mx-auto lg:py-0"
+				>
+					<div
+						class="w-full rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
+					>
 						<div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-							<h1 class="text-xl font-h1 leading-tight tracking-tight md:text-2xl dark:text-white">
+							<h1
+								class="text-xl font-h1 leading-tight tracking-tight md:text-2xl dark:text-white"
+							>
 								Sing in to your account
 							</h1>
 							<p id="general-error" class="text-xl text-red-800 capitalize"></p>
@@ -68,12 +74,18 @@
 										class="bg-gray-50 font-body border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
 										placeholder="name@company.com"
 									/>
-									<span id="emailError" class="hidden font-body text-sm ml-2 text-red-700">
+									<span
+										id="emailError"
+										class="hidden font-body text-sm ml-2 text-red-700"
+									>
 										Please enter your email
 									</span>
-									<span id="emailNotValid" class="hidden font-body text-sm ml-2 text-red-700">
-										Email is not valid must be a valid stud.noroff.no or noroff.no
-										email address
+									<span
+										id="emailNotValid"
+										class="hidden font-body text-sm ml-2 text-red-700"
+									>
+										Email is not valid must be a valid stud.noroff.no or
+										noroff.no email address
 									</span>
 								</div>
 								<div class="password-input">
@@ -89,7 +101,10 @@
 										placeholder="••••••••"
 										class="bg-gray-50 font-body border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
 									/>
-									<span id="passwordError" class="hidden font-body text-sm ml-2 text-red-700"> 
+									<span
+										id="passwordError"
+										class="hidden font-body text-sm ml-2 text-red-700"
+									>
 										Please enter your password
 									</span>
 								</div>
@@ -99,9 +114,7 @@
 								>
 									Log in to your account
 								</button>
-								<div
-									class="text-sm font-body text-gray-500 dark:text-gray-300"
-								>
+								<div class="text-sm font-body text-gray-500 dark:text-gray-300">
 									Not registered?
 									<a
 										href="/signup.html"
