fixes on background

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 			</nav>
 		</header>
 		<main>
-			<section class="dark:bg-gray-900 mt-16 sm:mt-[98x] sm:py-20 lg:py-0 z-10">
+			<section class="bg-[#28282F] mt-16 sm:mt-[98x] sm:py-20 lg:py-0 z-10">
 				<div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
 					<div class="mr-auto place-self-center lg:col-span-7">
-						<h1 class="max-w-2xl mb-4 text-4xl font-h1 tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">
+						<h1 class="max-w-2xl mb-4 text-4xl font-h1 tracking-tight leading-none md:text-5xl xl:text-6xl text-white">
 							Auction up your items today!
 						</h1>
 						<p class="mb-6 text-lg font-h2 text-white">
@@ -273,13 +273,13 @@
 			<div
 				class="max-w-screen-lg mx-auto sm:flex sm:items-center sm:justify-between"
 			>
-				<span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+				<span class="text-sm text-gray-500 sm:text-center"
 					>© 2022
 					<a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>.
 					All Rights Reserved.
 				</span>
 				<div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
-					<a href="#" class="text-white dark:hover:text-gray-500">
+					<a href="#" class="text-white hover:text-gray-500">
 						<svg
 							class="w-5 h-5"
 							fill="currentColor"
